--- a/Wazaa/Wazaa.fsproj
+++ b/Wazaa/Wazaa.fsproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{37776400-B4BF-4FDE-A5C7-FCC8F418D654}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>Wazaa</RootNamespace>
     <AssemblyName>Wazaa</AssemblyName>
   </PropertyGroup>
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="MainWindow.fs" />
+    <Compile Include="Server.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" />
