--- a/Wazaa/Wazaa.fsproj
+++ b/Wazaa/Wazaa.fsproj
@@ -41,10 +41,14 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Logger.fs" />
     <Compile Include="MainWindow.fs" />
+    <Compile Include="Client.fs" />
     <Compile Include="Server.fs" />
     <Compile Include="Main.fs" />
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\machines.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -58,5 +62,8 @@
     <Reference Include="glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 </Project>
