--- a/Wazaa/Wazaa.Gui.fsproj
+++ b/Wazaa/Wazaa.Gui.fsproj
@@ -39,9 +39,6 @@
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="(!Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')) And (!Exists('$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets')) And (Exists('$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets'))" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Logger.fs" />
-    <Compile Include="Client.fs" />
-    <Compile Include="Server.fs" />
     <Compile Include="MainWindow.fs" />
     <Compile Include="Main.fs" />
     <None Include="App.config">
@@ -65,5 +62,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wazaa.Server\Wazaa.fsproj">
+      <Project>{ACCEDF4E-95DD-42BF-AAEC-D2133DA6F3D6}</Project>
+      <Name>Wazaa</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
