--- a/Wazaa.Console/Wazaa.Console.fsproj
+++ b/Wazaa.Console/Wazaa.Console.fsproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
-    <ProjectReference Include="..\Wazaa.Server\Wazaa.fsproj">
+    <ProjectReference Include="..\Wazaa\Wazaa.fsproj">
       <Project>{ACCEDF4E-95DD-42BF-AAEC-D2133DA6F3D6}</Project>
       <Name>Wazaa</Name>
     </ProjectReference>
