--- a/Wazaa.Gui/Wazaa.Gui.fsproj
+++ b/Wazaa.Gui/Wazaa.Gui.fsproj
@@ -7,8 +7,8 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{37776400-B4BF-4FDE-A5C7-FCC8F418D654}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Wazaa</RootNamespace>
-    <AssemblyName>Wazaa</AssemblyName>
+    <RootNamespace>Wazaa.Gui</RootNamespace>
+    <AssemblyName>Wazaa.Gui</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -64,7 +64,7 @@
     <Folder Include="Data\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Wazaa.Server\Wazaa.fsproj">
+    <ProjectReference Include="..\Wazaa\Wazaa.fsproj">
       <Project>{ACCEDF4E-95DD-42BF-AAEC-D2133DA6F3D6}</Project>
       <Name>Wazaa</Name>
     </ProjectReference>
