--- a/Wazaa/Wazaa.fsproj
+++ b/Wazaa/Wazaa.fsproj
@@ -7,8 +7,8 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{ACCEDF4E-95DD-42BF-AAEC-D2133DA6F3D6}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Wazaa.Server</RootNamespace>
-    <AssemblyName>Wazaa.Server</AssemblyName>
+    <RootNamespace>Wazaa</RootNamespace>
+    <AssemblyName>Wazaa</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
