Refactored configuration file reading.

--- a/Wazaa/Wazaa.fsproj
+++ b/Wazaa/Wazaa.fsproj
@@ -36,11 +36,13 @@
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Config.fs" />
     <Compile Include="Logger.fs" />
     <Compile Include="Client.fs" />
     <Compile Include="Server.fs" />
