--- a/Wazaa.Gui/App.config
+++ b/Wazaa.Gui/App.config
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="host" value="127.0.0.1" />
+    <add key="port" value="2345" />
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
