--- a/Wazaa.Gui/Wazaa.Gui.fsproj
+++ b/Wazaa.Gui/Wazaa.Gui.fsproj
@@ -59,9 +59,12 @@
     <Reference Include="glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Wazaa\Wazaa.fsproj">
-      <Project>{ACCEDF4E-95DD-42BF-AAEC-D2133DA6F3D6}</Project>
       <Name>Wazaa</Name>
+      <Project>{accedf4e-95dd-42bf-aaec-d2133da6f3d6}</Project>
+      <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
 </Project>
