--- a/Wazaa.Gui/Wazaa.Gui.fsproj
+++ b/Wazaa.Gui/Wazaa.Gui.fsproj
@@ -40,6 +40,8 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="LogControl.fs" />
+    <Compile Include="ConfigurationControl.fs" />
+    <Compile Include="PeerControl.fs" />
     <Compile Include="MainWindow.fs" />
     <Compile Include="MainForm.fs" />
     <Compile Include="Main.fs" />
