--- a/Wazaa.Gui/App.config
+++ b/Wazaa.Gui/App.config
@@ -3,6 +3,7 @@
   <appSettings>
     <add key="host" value="127.0.0.1" />
     <add key="port" value="2345" />
+    <add key="shared_path" value="" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
