--- a/Wazaa.Gui/Wazaa.Gui.fsproj
+++ b/Wazaa.Gui/Wazaa.Gui.fsproj
@@ -48,9 +48,10 @@
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="machines.txt">
+    <Content Include="..\machines.txt">
+      <Link>machines.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -61,8 +62,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Wazaa\Wazaa.fsproj">
       <Name>Wazaa</Name>
       <Project>{ACCEDF4E-95DD-42BF-AAEC-D2133DA6F3D6}</Project>
